--- a/src/assets/style/vantChange.less
+++ b/src/assets/style/vantChange.less
@@ -67,4 +67,5 @@
 @border-radius-lg: 8px;
 @border-radius-max: 999px;
 
-// @nav-bar-title-text-color:@blue;s
+// @nav-bar-title-text-color:@blue;
+@grid-item-text-font-size:14px;
