--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -10,6 +10,14 @@ abbr,acronym { border:0}
   body,html{
       width: 100%;
       height: 100%;
-      background: rebeccapurple;
   }
 
+/**
+ * 适配 iphone 底部安全区（指示条，配合index.html <meta name="viewport" ... />使用
+ */
+ @supports (bottom: env(safe-area-inset-bottom)){
+  #app {
+      padding-bottom: constant(safe-area-inset-bottom);
+      padding-bottom: env(safe-area-inset-bottom);
+  }
+}
