--- a/src/assets/style/vantChange.less
+++ b/src/assets/style/vantChange.less
@@ -69,3 +69,11 @@
 
 // @nav-bar-title-text-color:@blue;
 @grid-item-text-font-size:14px;
+@tab-text-color:#000;
+@tab-font-size:14px;
+@tabs-line-height:30px;
+@grid-item-content-padding:0;
+@sidebar-background-color:#fff;
+@sidebar-width:92px;
+@sidebar-font-size:14px;
+@sidebar-padding:20px 0;
